# swfaw

./: .gitignore  README.md  daemon.html  package.json  tailwind.config.js  tsconfig.json  update-demo.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: base.json  default.json
src-tauri/src/: lib.rs  main.rs  tray.rs  window.rs  windows.rs
src-tauri/src/command/: mod.rs
src-tauri/src/common/tray/: mod.rs
src-tauri/src/common/utils/: jsonformatter.rs  mod.rs
src-tauri/src/common/windows/: mod.rs
src/components/: app-sidebar.tsx  commandk.tsx  nav-user.tsx  window-control.tsx
src/components/ui/: window-controls.tsx
src/hooks/: debounce.ts  useConfig.ts  useGetState.ts
src/lib/: format.ts
src/lib/db/: index.ts  init.ts
src/lib/event-bus/: index.ts
src/lib/notify/: audio.ts
src/page/about/: index.tsx
src/page/calendar/: index.tsx
src/page/ctx/: Todo.tsx  index.tsx  readwise.tsx
src/page/dashboard/: index.tsx
src/page/home/: index.tsx
src/page/layout/: index.tsx
src/page/notification/rest/: index.tsx
src/page/settings/: index.tsx  update.tsx
src/page/tools/: index.tsx  symlink.tsx  timeutil.tsx
src/route/: index.ts
src/store/: index.ts  persist-store.ts
src/types/: dbt.ts  rest.ts
src/window/Main/: index.tsx
src/window/Notify/: index.tsx
